--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -212,3 +212,6 @@ sketch
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,next,typescript,react,visualstudiocode,qwik
+
+# Vercel
+.vercel
